// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item snapshot tests 1`] = `
<div
  class="  px-0 "
>
  <div
    class=" text-muted small pt-1 px-2"
    style="display: flex; align-items: center;"
  >
    dhouston
     
     
    ↑104
     
    <svg
      height="1.1em"
      style="display: inline-block; vertical-align: middle;"
      viewBox="0 0 512 512"
      width="1.1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 64C150 64 64 150 64 256s86 192 192 192 192-86 192-192S362 64 256 64z"
        fill="none"
        stroke="currentColor"
        stroke-miterlimit="10"
        stroke-width="32"
      />
      <path
        d="M256 128L256 272 352 272"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="32"
      />
    </svg>
    13.2y
  </div>
  <div
    class="px-2 py-1 text-muted small w-100 text-truncate"
  />
  <div
    class="collapse show"
  >
    <div
      class=" py-1 px-2"
      style="word-break: break-word;"
    >
      <h4>
        My YC app: Dropbox - Throw away your USB drive
      </h4>
      <a
        class="p-1 link-card d-flex align-items-center mb-2"
        href="http://www.getdropbox.com/u/2/screencast.html"
      >
        <svg
          height="2em"
          style="display: inline-block; vertical-align: middle;"
          viewBox="0 0 512 512"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M448 256c0-106-86-192-192-192S64 150 64 256s86 192 192 192 192-86 192-192z"
            fill="none"
            stroke="currentColor"
            stroke-miterlimit="10"
            stroke-width="32"
          />
          <path
            d="M350.67 150.93l-117.2 46.88a64 64 0 00-35.66 35.66l-46.88 117.2a8 8 0 0010.4 10.4l117.2-46.88a64 64 0 0035.66-35.66l46.88-117.2a8 8 0 00-10.4-10.4zM256 280a24 24 0 1124-24 24 24 0 01-24 24z"
            fill="currentColor"
          />
        </svg>
        <span
          class="pl-2 ml-2 pr-2 link-card--text text-truncate"
          style="flex: 1;"
        >
          http://www.getdropbox.com/u/2/screencast.html
        </span>
      </a>
      <div
        class="item--hn-text"
      />
    </div>
    <div
      class="h-border-top d-flex align-items-center"
    >
      <a
        class="d-inline-flex align-items-center h-border-right py-2 px-2 hnr-inherit-color"
        href="https://news.ycombinator.com/item?id=8863"
        role="button"
      >
        <svg
          height="1.5em"
          style="display: inline-block; vertical-align: middle;"
          viewBox="0 0 512 512"
          width="1.5em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M208 352h-64a96 96 0 010-192h64M304 160h64a96 96 0 010 192h-64"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="36"
          />
          <path
            d="M163.29 256L350.71 256"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="36"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Item snapshot tests 2`] = `
<div
  class="  px-0 "
>
  <div
    class=" text-muted small pt-1 px-2"
    style="display: flex; align-items: center;"
  >
    Diederich
     
     
     
    <svg
      height="1.1em"
      style="display: inline-block; vertical-align: middle;"
      viewBox="0 0 512 512"
      width="1.1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 64C150 64 64 150 64 256s86 192 192 192 192-86 192-192S362 64 256 64z"
        fill="none"
        stroke="currentColor"
        stroke-miterlimit="10"
        stroke-width="32"
      />
      <path
        d="M256 128L256 272 352 272"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="32"
      />
    </svg>
    4d
  </div>
  <div
    class="px-2 py-1 text-muted small w-100 text-truncate"
  />
  <div
    class="collapse show"
  >
    <div
      class=" py-1 px-2"
      style="word-break: break-word;"
    >
      <div
        class="item--hn-text"
      >
        Yup; it's packed full of such gems.
      </div>
    </div>
    <div
      class="h-border-top d-flex align-items-center"
    >
      <a
        class="d-inline-flex align-items-center h-border-right py-2 px-2 hnr-inherit-color"
        href="https://news.ycombinator.com/item?id=23326827"
        role="button"
      >
        <svg
          height="1.5em"
          style="display: inline-block; vertical-align: middle;"
          viewBox="0 0 512 512"
          width="1.5em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M208 352h-64a96 96 0 010-192h64M304 160h64a96 96 0 010 192h-64"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="36"
          />
          <path
            d="M163.29 256L350.71 256"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="36"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Item snapshot tests 3`] = `
<div
  class="  px-0 "
>
  <div
    class=" text-muted small pt-1 px-2"
    style="display: flex; align-items: center;"
  >
    r721
     
     
     
    <svg
      height="1.1em"
      style="display: inline-block; vertical-align: middle;"
      viewBox="0 0 512 512"
      width="1.1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 64C150 64 64 150 64 256s86 192 192 192 192-86 192-192S362 64 256 64z"
        fill="none"
        stroke="currentColor"
        stroke-miterlimit="10"
        stroke-width="32"
      />
      <path
        d="M256 128L256 272 352 272"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="32"
      />
    </svg>
    4d
  </div>
  <div
    class="px-2 py-1 text-muted small w-100 text-truncate"
  />
  <div
    class="collapse show"
  >
    <div
      class=" py-1 px-2"
      style="word-break: break-word;"
    >
      <div
        class="item--hn-text"
      >
        Recent discussions:
        <p>
          <a
            href="https://news.ycombinator.com/item?id=23317570"
            rel="nofollow"
          >
            https://news.ycombinator.com/item?id=23317570
          </a>
        </p>
        <p>
          <a
            href="https://news.ycombinator.com/item?id=23223219"
            rel="nofollow"
          >
            https://news.ycombinator.com/item?id=23223219
          </a>
        </p>
        <p>
          <a
            href="https://news.ycombinator.com/item?id=23221264"
            rel="nofollow"
          >
            https://news.ycombinator.com/item?id=23221264
          </a>
        </p>
      </div>
    </div>
    <div
      class="py-2 mx-2"
    >
      <a
        class="p-1 link-card d-flex align-items-center "
        href="https://dapper.dilraj.dev/item?id=23317570"
      >
        <svg
          height="2em"
          style="display: inline-block; vertical-align: middle;"
          viewBox="0 0 512 512"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M448 256c0-106-86-192-192-192S64 150 64 256s86 192 192 192 192-86 192-192z"
            fill="none"
            stroke="currentColor"
            stroke-miterlimit="10"
            stroke-width="32"
          />
          <path
            d="M350.67 150.93l-117.2 46.88a64 64 0 00-35.66 35.66l-46.88 117.2a8 8 0 0010.4 10.4l117.2-46.88a64 64 0 0035.66-35.66l46.88-117.2a8 8 0 00-10.4-10.4zM256 280a24 24 0 1124-24 24 24 0 01-24 24z"
            fill="currentColor"
          />
        </svg>
        <span
          class="pl-2 ml-2 pr-2 link-card--text text-truncate"
          style="flex: 1;"
        >
          https://dapper.dilraj.dev/item?id=23317570
        </span>
      </a>
    </div>
    <div
      class="py-2 mx-2"
    >
      <a
        class="p-1 link-card d-flex align-items-center "
        href="https://dapper.dilraj.dev/item?id=23223219"
      >
        <svg
          height="2em"
          style="display: inline-block; vertical-align: middle;"
          viewBox="0 0 512 512"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M448 256c0-106-86-192-192-192S64 150 64 256s86 192 192 192 192-86 192-192z"
            fill="none"
            stroke="currentColor"
            stroke-miterlimit="10"
            stroke-width="32"
          />
          <path
            d="M350.67 150.93l-117.2 46.88a64 64 0 00-35.66 35.66l-46.88 117.2a8 8 0 0010.4 10.4l117.2-46.88a64 64 0 0035.66-35.66l46.88-117.2a8 8 0 00-10.4-10.4zM256 280a24 24 0 1124-24 24 24 0 01-24 24z"
            fill="currentColor"
          />
        </svg>
        <span
          class="pl-2 ml-2 pr-2 link-card--text text-truncate"
          style="flex: 1;"
        >
          https://dapper.dilraj.dev/item?id=23223219
        </span>
      </a>
    </div>
    <div
      class="py-2 mx-2"
    >
      <a
        class="p-1 link-card d-flex align-items-center "
        href="https://dapper.dilraj.dev/item?id=23221264"
      >
        <svg
          height="2em"
          style="display: inline-block; vertical-align: middle;"
          viewBox="0 0 512 512"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M448 256c0-106-86-192-192-192S64 150 64 256s86 192 192 192 192-86 192-192z"
            fill="none"
            stroke="currentColor"
            stroke-miterlimit="10"
            stroke-width="32"
          />
          <path
            d="M350.67 150.93l-117.2 46.88a64 64 0 00-35.66 35.66l-46.88 117.2a8 8 0 0010.4 10.4l117.2-46.88a64 64 0 0035.66-35.66l46.88-117.2a8 8 0 00-10.4-10.4zM256 280a24 24 0 1124-24 24 24 0 01-24 24z"
            fill="currentColor"
          />
        </svg>
        <span
          class="pl-2 ml-2 pr-2 link-card--text text-truncate"
          style="flex: 1;"
        >
          https://dapper.dilraj.dev/item?id=23221264
        </span>
      </a>
    </div>
    <div
      class="h-border-top d-flex align-items-center"
    >
      <a
        class="d-inline-flex align-items-center h-border-right py-2 px-2 hnr-inherit-color"
        href="https://news.ycombinator.com/item?id=23325786"
        role="button"
      >
        <svg
          height="1.5em"
          style="display: inline-block; vertical-align: middle;"
          viewBox="0 0 512 512"
          width="1.5em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M208 352h-64a96 96 0 010-192h64M304 160h64a96 96 0 010 192h-64"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="36"
          />
          <path
            d="M163.29 256L350.71 256"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="36"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;
